--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "testStory",
-    "slug": "testStory",
+    "name": "PrintnGo",
+    "slug": "PrintnGo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
