--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.0",
     "expo-font": "~8.4.0",
-    "expo-linking": "~2.0.0",
+    "expo-linking": "^2.2.3",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.0.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-paper-form-builder": "^1.0.9",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-super-grid": "^4.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.15.7",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
