--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,1 +1,6 @@
-apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+implementation project(':react-native-camera')
+android {
+    defaultConfig {
+        missingDimensionStrategy 'react-native-camera', 'general' // <--- insert this line
+    }
+}
