--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-auth-boilerplate",
   "version": "1.0.0",
-  "description": "Boilerplate for very basic node + express.js user registration/authentication.",
+  "description": "Server",
   "main": "server.js",
   "scripts": {
-    "start": "cd server && nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "node.js",
@@ -15,13 +15,16 @@
   "author": "Yang Lorenzana",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-http-proxy": "^1.6.2",
     "mongodb": "^3.6.6",
     "mongoose": "^5.1.5",
-    "mongoose-unique-validator": "^2.0.1"
+    "mongoose-unique-validator": "^2.0.1",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
