--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "node-libs-react-native": "^1.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.0.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-paper": "^4.7.2",
     "react-native-paper-form-builder": "^1.0.9",
     "react-native-safe-area-context": "3.1.9",
@@ -42,7 +44,8 @@
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.7",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
