--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^7.0.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-get-random-values": "^1.7.0",
@@ -41,6 +42,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-super-grid": "^4.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.7",
